fixed index file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   </head>
   <body>
-
+<h1><a href="list.html">List</a></h1>
 
   </body>
 </html>
