Added main features including sorting, filtering, and styling

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="app">
   <head>
     <script type="text/javascript" src="angular.min.js"></script>
 	<script type="text/javascript" src="jquery.js"></script>
@@ -9,6 +9,6 @@
   </head>
   <body>
 <h1><a href="list.html">List</a></h1>
-
+{{2+3}}
   </body>
 </html>
