--- a/list.html
+++ b/list.html
@@ -46,8 +46,11 @@
 		  $scope.queryBy = '$'
 		  $scope.predicate = 'author';
 		  $scope.reverse = true;
-		
+		  $scope.order = function(predicate) {
+          $scope.reverse = ($scope.predicate === predicate) ? !$scope.reverse : false;
+          $scope.predicate = predicate;}
 		});
+		
 
       });
     </script>
