--- a/list.html
+++ b/list.html
@@ -3,11 +3,12 @@
   <head>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	<link rel="stylesheet" href="application.css">
+	<link rel="stylesheet" href="animate.min.css">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular.min.js"></script>
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
   </head>
-  <body ng-controller="TutorialCtrl">
+  <body class="animated slideInUp" ng-controller="TutorialCtrl">
 		<h1 style="text-align: center; font-family: Trebuchet MS, Helvetica, sans-serif;">AngularJS Tutorials</h1>
            <div class="input-group col-lg-12">
 				<input class="form-control" placeholder="Search by title or author" ng-model="query[queryBy]" /> 
