--- a/list.html
+++ b/list.html
@@ -8,7 +8,8 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular.min.js"></script>
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
   </head>
-  <body class="animated slideInUp" ng-controller="TutorialCtrl">
+  <body>
+	<div class="content animated slideInUp" ng-controller="TutorialCtrl">
 		<h1 style="text-align: center; font-family: Trebuchet MS, Helvetica, sans-serif;">AngularJS Tutorials</h1>
            <div class="input-group col-lg-12">
 				<input class="form-control" placeholder="Search by title or author" ng-model="query[queryBy]" /> 
@@ -37,6 +38,7 @@
 						<h4 class="text-right">By: {{item.author}}</h4>
 					</div>
 				</div>
+		</div>
   </body> 
   <script>
       var tutorialsList = angular.module('tutorialsList', []);
