--- a/list.html
+++ b/list.html
@@ -9,6 +9,24 @@
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
   </head>
   <body>
+  <nav class="navbar navbar-default navbar-static-top">
+      <div class="container">
+        <div class="navbar-header">
+		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Homework 5</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="index.html">Blog</a></li>
+			<li class="active"><a href="list.html">Demo</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
 	<div class="content animated slideInUp" ng-controller="TutorialCtrl">
 		<h1 style="text-align: center; font-family: Trebuchet MS, Helvetica, sans-serif;">AngularJS Tutorials</h1>
            <div class="input-group col-lg-12">
