fixed search bar

--- a/list.html
+++ b/list.html
@@ -29,7 +29,7 @@
     </nav>
 	<div class="content animated slideInUp" ng-controller="TutorialCtrl">
 		<h1 style="text-align: center; font-family: Trebuchet MS, Helvetica, sans-serif;">AngularJS Tutorials</h1>
-           <div class="input-group col-lg-12">
+           <div class="input-group col-sm-12">
 				<input class="form-control" placeholder="Search by title or author" ng-model="query[queryBy]" /> 
 		   </div>
 				<div class="btn-group btn-group-justified" role="group" aria-label="...">
