started blog post

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
                     <p>You can also use Angular by referencing the CDN from your html page. <a target="_blank" href="https://cdnjs.com/libraries/angular.js/">Click here</a> to get the AngularJS CDN.   </p>
 					<p>This is how you reference the CDN in your project:</p>
-                        <img class="img-responsive" src="cdn.png" alt="">
+                        <img class="img-responsive" src="cdn.PNG" alt="">
 						
 					<h2 class="section-heading">Including the Module</h2>
 
