--- a/list.html
+++ b/list.html
@@ -7,6 +7,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular.min.js"></script>
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+	<script src="boot.js"></script>
   </head>
   <body>
   <nav class="navbar navbar-default navbar-static-top">
