--- a/list.html
+++ b/list.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="tutorialsList">
   <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	<link rel="stylesheet" href="application.css">
 	<link rel="stylesheet" href="animate.min.css">
@@ -18,7 +19,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Homework 5</a>
+          <a class="navbar-brand" href="#">AngularJS</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
