fixed controller snippet

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <p>Now you have to define the controller inside your HTML page.  
 					The controller should be added where you want to interact with the data. 
 					<p>This is how you use the "ng-controller" directive in your HTML:</p>
-                        <img class="img-responsive" src="htmlcontrol.png" alt="">
+                        <img class="img-responsive" src="htmlcontrol.PNG" alt="">
 						
 					<h2 class="section-heading">Using Expressions</h2>
 
