--- a/list.html
+++ b/list.html
@@ -29,8 +29,8 @@
         </div><!--/.nav-collapse -->
       </div>
     </nav>
-	<div class="content animated slideInUp" ng-controller="TutorialCtrl">
-		<h1 style="text-align: center; font-family: Trebuchet MS, Helvetica, sans-serif;">AngularJS Tutorials</h1>
+	<div style="font-family: Trebuchet MS, Helvetica, sans-serif;" class="content animated slideInUp" ng-controller="TutorialCtrl">
+		<h1 style="text-align: center;">AngularJS Tutorials</h1>
            <div class="input-group col-sm-12">
 				<input class="form-control" placeholder="Search by title or author" ng-model="query[queryBy]" /> 
 		   </div>
