changed font on index

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <!-- Post Content -->
     <article>
-        <div class="container">
+        <div style="font-family: Trebuchet MS, Helvetica, sans-serif;" class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 					<h2 class="section-heading">An Introduction to AngularJS</h2>
