added background color

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <!-- jQuery  -->
 <script src="jquery.js"></script>
 <!-- Minified Bootstrap script -->
-<script src="boot.js"></script>		
+<script src="boot.js"></script>	
+<link rel="stylesheet" href="application.css">	
   </head>
   <body>
 	<nav class="navbar navbar-default navbar-static-top">
