Edited index file

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 					
 					<h2 class="section-heading">First Things First</h2>
 
-                    <p>In order to use AngularJS, you must add it in your project.  The fastest way to add AngularJS is by using automation tools  such as <a target="_blank" href="www.bower.io">Bower</a> and <a target="_blank" href="https://www.npmjs.com/">npm.</a></p>
+                    <p>In order to use AngularJS, you must add it in your project.  The fastest way to add AngularJS is by using automation tools  such as <a target="_blank" href="http://www.bower.io">Bower</a> and <a target="_blank" href="https://www.npmjs.com/">npm.</a></p>
 					 <p>You can also do this by downloading the actual source code from <a target="_blank" href="https://angularjs.org">this website.</a>  Then, you need to reference the angular.min.js script in your html page after you add the script to your project folder.</p>
 
                     <p>You can also use Angular by referencing the CDN from your html page. <a target="_blank" href="https://cdnjs.com/libraries/angular.js/">Click here</a> to get the AngularJS CDN.   </p>
