--- a/list.html
+++ b/list.html
@@ -31,6 +31,7 @@
     </nav>
 	<div style="font-family: Trebuchet MS, Helvetica, sans-serif;" class="content animated slideInUp" ng-controller="TutorialCtrl">
 		<h1 style="text-align: center;">AngularJS Tutorials</h1>
+		<a target="_blank" href="https://github.com/JoeyMcCoy/Angular_Homework_2">View on Github</a>
            <div class="input-group col-sm-12">
 				<input class="form-control" placeholder="Search by title or author" ng-model="query[queryBy]" /> 
 		   </div>
